<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ons.digital.publishing</groupId>
    <artifactId>ONSDigitalPubTests</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ONSDigitalPubTests</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.version>3.5.1</maven.compiler.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm</artifactId>
            <version>1.2.5</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.mkolisnyk</groupId>
            <artifactId>cucumber-reports</artifactId>
            <version>1.0.7</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>com.pojosontheweb</groupId>
            <artifactId>monte-repack</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.8.5</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>

        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.3</version>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>info.cukes</groupId>-->
        <!--<artifactId>cucumber-picocontainer</artifactId>-->
        <!--<version>1.2.5</version>-->
        <!--<scope>test</scope>-->
        <!--</dependency>-->
    </dependencies>

    <profiles>
        <profile>
            <id>FlorenceTests</id>
            <properties>

                <include.tests>UsersAndAccessTest.java</include.tests>

            </properties>
        </profile>
        <profile>
            <id>WebTests</id>
            <properties>

                <include.tests>WebTests.java</include.tests>

            </properties>
        </profile>
        <profile>
            <id>CMDTests</id>
            <properties>

                <include.tests>CMDTests.java</include.tests>

            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkCount>2</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <!--<includes>-->
                    <!--<include>**/*Test*.class</include>-->
                    <!--</includes>-->
                    <includes>
                        <include>${include.tests}</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
                <!--<configuration>-->
                <!--<forkCount>2</forkCount>-->
                <!--<reuseForks>false</reuseForks>-->
                <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                <!--&lt;!&ndash;<systemPropertyVariables>&ndash;&gt;-->
                <!--&lt;!&ndash;<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>&ndash;&gt;-->
                <!--&lt;!&ndash;</systemPropertyVariables>&ndash;&gt;-->
                <!--&lt;!&ndash;<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>&ndash;&gt;-->

                <!--<includes>-->
                <!--<include>**/testrunner/*.java</include>-->
                <!--</includes>-->
                <!--</configuration>-->
            </plugin>
            <!--<plugin>-->
            <!--<groupId>net.masterthought</groupId>-->
            <!--<artifactId>maven-cucumber-reporting</artifactId>-->
            <!--<version>2.0.0</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<id>execution</id>-->
            <!--<phase>verify</phase>-->
            <!--<goals>-->
            <!--<goal>generate</goal>-->
            <!--</goals>-->
            <!--<configuration>-->
            <!--<projectName>ONSFrontEndTests-Digital-Publishing</projectName>-->
            <!--<outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>-->
            <!--<cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>-->
            <!--<skippedFails>true</skippedFails>-->
            <!--&lt;!&ndash;<enableFlashCharts>false</enableFlashCharts>&ndash;&gt;-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->

        </plugins>

    </build>

</project>
